--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -115,6 +115,9 @@
 			<br>
 			<br>
 			<br>
+      <br>
+
+      
 
       <section class="section latest-game" id="gallery" aria-label="gallery">
         <div class="container">
@@ -123,15 +126,94 @@
             <span class="span" style="color: #32cd32">Viime tapahtumat </span> 
           </h2>
 
-          <!--
-          <h3 class="h3 section-title3" style="text-align: left;">
-            <span class="span" style="color: marigold"> </span> <span class="span" style="color: #32cd32"> 25.04.2025 </span> 
-          </h3>
-          -->
+    <h2 style="color: #fff; text-align:left; margin-bottom: 10px">Vampire Savior Tournament</h2>
 
-          <!--
-          Tournament change
-      		-->
+    <ul class="has-scrollbar">
+
+      <li class="scrollbar-item">
+        <div class="latest-game-card">
+
+          <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+            <img src="../assets/images/events_images/small/gallery-22.jpg" width="450" height="600" loading="lazy"
+              alt="Vampire Savior Lahti Fisticuffs Turnaus Lahden Tiedepuistossa. Yö pelaaminen. Lahti FGC organisoinut"
+              title="Yö pelaaminen" class="img-cover">
+          </figure>
+
+
+        </div>
+      </li>
+
+      <li class="scrollbar-item">
+        <div class="latest-game-card">
+
+          <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+            <img src="../assets/images/events_images/small/gallery-23.jpg" width="450" height="600" loading="lazy"
+              alt="Vampire Savior Lahti Fisticuffs Turnaus Lahden Tiedepuistossa. Kielletty taso. Lahti FGC organisoinut"
+              title="Kielletty taso" class="img-cover">
+          </figure>
+
+
+        </div>
+      </li>
+
+      <li class="scrollbar-item">
+        <div class="latest-game-card">
+
+          <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+            <img src="../assets/images/events_images/small/gallery-24.jpg" width="450" height="600" loading="lazy"
+              alt="Vampire Savior Lahti Fisticuffs Turnaus Lahden Tiedepuistossa. Nuubunaattori VS Eedu. Lahti FGC organisoinut"
+              title="Nuubunaattori VS Eedu" class="img-cover">
+          </figure>
+        </div>
+      </li>
+    </ul>
+    <br>
+    <ul class="has-scrollbar">
+
+      <li class="scrollbar-item">
+        <div class="latest-game-card">
+
+          <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+            <img src="../assets/images/events_images/small/gallery-25.jpg" width="450" height="600" loading="lazy"
+              alt="Vampire Savior Lahti Fisticuffs Turnaus Lahden Tiedepuistossa. YaBoiSpades vs Nuubunaattori. Lahti FGC organisoinut"
+              title="YaBoiSpades vs Nuubunaattori" class="img-cover">
+          </figure>
+
+
+        </div>
+      </li>
+
+      <li class="scrollbar-item">
+        <div class="latest-game-card">
+
+          <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+            <img src="../assets/images/events_images/small/gallery-26.jpg" width="450" height="600" loading="lazy"
+              alt="Vampire Savior Lahti Fisticuffs Turnaus Lahden Tiedepuistossa. Lämmittely. Lahti FGC organisoinut"
+              title="Lämmittely" class="img-cover">
+          </figure>
+
+
+        </div>
+      </li>
+
+      <li class="scrollbar-item">
+        <div class="latest-game-card">
+
+          <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+            <img src="../assets/images/events_images/small/gallery-27.jpg" width="450" height="600" loading="lazy"
+              alt="Vampire Savior Lahti Fisticuffs Turnaus Lahden Tiedepuistossa. Yleisö. Lahti FGC organisoinut"
+              title="Vampire Savior pelaajat" class="img-cover">
+          </figure>
+        </div>
+      </li>
+    </ul>
+
+    <!--
+                    MARK: Tournament change
+                		-->
+
+    <br>
+    <br>
 
 <h2 style="color: #fff; text-align:left; margin-bottom: 10px">Tekken 7 Turnaus</h2>
 
@@ -620,10 +702,142 @@
 			<br>
 			<br>
 			<br>
+
+<h2 class="h2 section-title">
+  <span class="span" style="color: #32cd32">Lahti FGC</span>
+</h2>
+
+<div class="container">
+
+  <ul class="has-scrollbar">
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-28.jpg" width="450" height="600" loading="lazy"
+            alt="Opiskelijamessut Lahden ammattikorkeakoululla LAB:illa. Lahti FGC ständi" title="LAB opiskelijamessut"
+            class="img-cover">
+        </figure>
+
+
+      </div>
+    </li>
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-29.jpg" width="450" height="600" loading="lazy"
+            alt="Game Över tapahtuma Lahden pääkirjastossa. Huone jossa Lahti FGC oli" title="Game Över 2025" class="img-cover">
+        </figure>
+
+
+      </div>
+    </li>
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-30.jpg" width="450" height="600" loading="lazy"
+            alt="Re:Install 3 tapahtuma, hienolla Dengeki Bunko turnauksella Funz:ilta. Lahti FGC ja Turpakellari auttoi"
+            title="Re:Install 3. Dengeki Bunko" class="img-cover">
+        </figure>
+      </div>
+    </li>
+  </ul>
+  <br>
+  <ul class="has-scrollbar">
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-31.jpg" width="450" height="600" loading="lazy"
+            alt="LahtiFGC vakkarit (kanta-asiakkaat) Re:Install 3 tapahtumassa" title="Re:Install 3 LahtiFGC" class="img-cover">
+        </figure>
+
+
+      </div>
+    </li>
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-32.jpg" width="450" height="600" loading="lazy"
+            alt="YaBoiSpades pelaa MARVEL Tōkon:ia Lahti FGC viikottaisessa" title="MARVEL Tōkon" class="img-cover">
+        </figure>
+
+
+      </div>
+    </li>
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-33.jpg" width="450" height="600" loading="lazy"
+            alt="Yleinen, perinteinen Lahti FGC viikottainen sunnuntai" title="Lahti FGC viikottainen" class="img-cover">
+        </figure>
+      </div>
+    </li>
+  </ul>
+  <br>
+  <ul class="has-scrollbar">
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-34.jpg" width="450" height="600" loading="lazy"
+            alt="Yleinen, perinteinen Lahti FGC viikottainen sunnuntai, mutta uudessa kohdassa" title="Lahti FGC viikottainen"
+            class="img-cover">
+        </figure>
+
+
+      </div>
+    </li>
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-35.jpg" width="450" height="600" loading="lazy"
+            alt="Dengeki Bunko harjoittelua Lahti FGC viikottaisessa" title="Dengeki Bunko : 3" class="img-cover">
+        </figure>
+
+
+      </div>
+    </li>
+
+    <li class="scrollbar-item">
+      <div class="latest-game-card">
+
+        <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
+          <img src="../assets/images/gallery_images/small/gallery-36.jpg" width="450" height="600" loading="lazy"
+            alt="Lahti FGC viikottainen, jossa porukka pelaa GG Strive" title="Lahti FGC viikottainen Strive" class="img-cover">
+        </figure>
+      </div>
+    </li>
+  </ul>
+
+
+  <!--
+                      MARK: Section change
+                      -->
+
+  <br>
+  <br>
+  <br>
+  <br>
 			
 			          <h2 class="h2 section-title">
              <span class="span" style="color: #32cd32"> Videopeli-illat </span>
           </h2>
+
+          
 
                <div class="container">
 
