--- a/fi/index.html
+++ b/fi/index.html
@@ -196,7 +196,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">Tauolla</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:1.8rem">Alkaa 6.2.2026</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">BoardGamesKerho <br><br><span class="span">Lautapelikerho</span></div>
@@ -216,7 +216,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">Tauolla</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:1.8rem">Alkaa 6.2.2026</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">VideoGamesKerho<br><br><span class="span">Videopelikerho</span></div>
@@ -286,7 +286,8 @@
 
                 <figure class="card-banner img-holder">
                   <img src="../assets/images/events_images/bbcf_banner.jpg" width="324" height="300" loading="lazy"
-                    alt="BlazBlue tournaus" class="img-cover">
+                    alt="BlazBlue tournaus" class="img-cover"
+                    style="border: 3px solid; border-color: var(--xiketic_90); background-color: var(--light-gray-1)">
                 </figure>
 
                 <div class="card-content">
