--- a/en/v-list.html
+++ b/en/v-list.html
@@ -163,7 +163,7 @@
         <aside id="filter-sidebar" class="filter-sidebar">
           <!-- Cart buttons (desktop) -->
           <div class="cart-buttons-row desktop-only">
-            <a href="reserve.html" id="cart-icon-btn" class="cart-icon-btn" title="Cart (empty)">
+            <a href="reserve.html" id="cart-icon-btn" class="cart-icon-btn"  style="height:42px"title="Cart (empty)">
               <ion-icon name="reader-outline"></ion-icon>
               <span id="cart-badge" class="cart-badge" style="display: none;">0</span>
               <span class="cart-label">Reserve</span>
