--- a/en/reserve.html
+++ b/en/reserve.html
@@ -253,209 +253,24 @@
   -----------------------------------------------
   -->
 
-  <footer class="footer" id="footer">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
-      <br>
-      <br>
-
-    <div class="footer-top">
-      <div class="container">
-
-        <div class="footer-brand">
-
-          <p class="logo2">Kaptam Gamers</p>
-          <p class="footer-list-title" id="some"></p>
-          <p class="footer-text">
-            Association for Video Gamers, Board Gamers and Role-Players
-          </p>
-
-          <ul class="contact-list">
-
-            <li class="contact-item">
-              <div class="contact-icon">
-                <ion-icon name="location"></ion-icon>
-              </div>
-
-              <address class="item-text">
-                <a href="https://maps.app.goo.gl/seNsq8FYJo5qo1tc7">Address : <br> Mukkulankatu 19 <br>15210 Lahti</a>
-              </address>
-            </li>
-
-            <li class="contact-item">
-              <div class="contact-icon">
-                <ion-icon name="call"></ion-icon>
-              </div>
-
-
-              <a href="tel:+358408505051" class="item-text">Phone : +358 40 850 5051</a>
-
-            </li>
-
-            <li class="contact-item">
-              <div class="contact-icon">
-                <ion-icon name="mail-open"></ion-icon>
-              </div>
-
-              <a href="mailto:kaptamgamers@gmail.com" class="item-text">Email : kaptamgamers@gmail.com</a>
-            </li>
-
-      <li class="contact-item">
-              <div class="contact-icon">
-                <ion-icon name="document-outline"></ion-icon>
-              </div>
-
-              <a href="../assets/pdf/kaptam_gamers_ry_saannot.pdf" class="item-text">Text : Association Rules</a>
-            </li>
-      <li class="contact-item">
-              <div class="contact-icon">
-                <ion-icon name="save-outline"></ion-icon>
-              </div>
-
-              <a href="https://drive.google.com/drive/folders/10oNQlse6Te3afM2i28CCFx_4Bhn5Coc1?usp=drive_link" class="item-text">Link : Mediabank</a>
-            </li>
-
-          </ul>
-
-        </div>
-
-        <div class="footer-wrapper">
-
-          <div class="social-wrapper">
-
-            <p class="footer-list-title">Kaptam Gamers</p>
-
-            <ul class="contact-list">
-              <li>
-                <a href="https://youtube.com/@kaptamgamers" target="_blank" class="social-link-2" style="background-color: #fd1d1d">
-                  <ion-icon name="logo-youtube"></ion-icon>
-          <p>Youtube</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://www.instagram.com/kaptamgamers" target="_blank" class="social-link-2" style="background-color: #e60073">
-                  <ion-icon name="logo-instagram"></ion-icon>
-           <p>Instagram</p>
-                </a>
-              </li>
-
-            </ul>
-
-           </div>
-
-        </div>
-
-                <div class="footer-wrapper">
-
-          <div class="social-wrapper">
-
-            <p class="footer-list-title">Lahti FGC</p>
-
-            <ul class="contact-list">
-              <li>
-                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
-                  <ion-icon name="logo-whatsapp"></ion-icon>
-          <p>WhatsApp</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://discord.gg/Ahac3BYPyp" target="_blank" class="social-link-2" style="background-color: #7289da">
-                  <ion-icon name="logo-discord"></ion-icon>
-          <p>Discord  <span style="font-size:11px">More chatting</span></p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
-                  <ion-icon name="logo-instagram"></ion-icon>
-           <p>Instagram</p>
-                </a>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-
-          <div class="footer-wrapper">
-
-          <div class="social-wrapper">
-
-          <p class="footer-list-title">Video games club</p>
-
-            <ul class="contact-list">
-
-              <li>
-                <a href="https://chat.whatsapp.com/E1r7nhvvHvvLC5aMSsv8NH" target="_blank" class="social-link-2" style="background-color: #076e54">
-                  <ion-icon name="logo-whatsapp"></ion-icon>
-          <p>WhatsApp</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="" target="_blank" class="social-link-2" style="background-color: #7289da">
-                  <ion-icon name="logo-discord"></ion-icon>
-                  <p>Discord</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://www.instagram.com/videogameskerho/" target="_blank" class="social-link-2" style="background-color: #e60073">
-                  <ion-icon name="logo-instagram"></ion-icon>
-           <p>Instagram</p>
-                </a>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-
-        <div class="footer-wrapper">
-
-          <div class="social-wrapper">
-
-            <p class="footer-list-title">Board games club</p>
-
-            <ul class="contact-list">
-              <li>
-                <a href="https://chat.whatsapp.com/E4ZDoieFq5X8K91nDPiM3R" target="_blank" class="social-link-2" style="background-color: #076e54">
-                  <ion-icon name="logo-whatsapp"></ion-icon>
-          <p>WhatsApp</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="" target="_blank" class="social-link-2" style="background-color: #7289da">
-                  <ion-icon name="logo-discord"></ion-icon>
-                  <p>Discord</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://www.instagram.com/boardgameskerho" target="_blank" class="social-link-2" style="background-color: #e60073">
-                  <ion-icon name="logo-instagram"></ion-icon>
-           <p>Instagram</p>
-                </a>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
+  <footer class="footer" id="footer">    
 
      <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">
-          &copy; 2026 Kaptam Gamers ry All Right Reserved.
+        <p class="copyright" style="margin: auto;">
+          2026 Kaptam Gamers ry All Right Reserved.
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
