--- a/en/about.html
+++ b/en/about.html
@@ -70,11 +70,11 @@
             <li class="navbar-item">
                   <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+
+          <li class="navbar-item">
+                  <a href="v-list.html" class="navbar-link skewBg" data-nav-link>Game list</a>
                   </li>
-            -->
+
             <li class="navbar-item">
                   <a href="gallery.html" class="navbar-link skewBg" data-nav-link>Gallery</a>
                   </li>
