--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -69,11 +69,11 @@
 			      <li class="navbar-item">
             <a href="videogames.html" class="navbar-link skewBg2" data-nav-link>Video games club</a>
             </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+
+          <li class="navbar-item">
+                  <a href="v-list.html" class="navbar-link skewBg" data-nav-link>Game list</a>
                   </li>
-            -->
+
             <li class="navbar-item">
                   <a href="gallery.html" class="navbar-link skewBg" data-nav-link>Gallery</a>
                   </li>
@@ -131,7 +131,7 @@
 
           <div class="hero-content">
 
-            <img src="../assets/images/lahti_fgc_images/lahti_fgc_logo.png" width="450" height="600" loading="lazy"
+            <img src="../assets/images/lahti_fgc_images/lahti_fgc_logo2.png" width="450" height="600" loading="lazy"
                   alt="Funz made Lahti FGC logo. Bro just made it without asking for it"
                   title="Lahti FGC logo"
                     class="img-cover">
@@ -262,7 +262,7 @@ MARK: #Games we have
       <br>
 
       <!-- Game List -->
-      <div id="game-list" class="game-list" style="margin-top: 2rem;">
+      <div id="game-list" class="game-list" style="margin-top: 2rem">
         <!-- Fighting games will be loaded here dynamically -->
       </div>
 
@@ -506,21 +506,25 @@ MARK: #Games we have
           07.08.2025 - Street Fighter 6
           <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>
           <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Last match in youtube</u></a>
+          <a href="https://www.instagram.com/p/DNFqV4osoei/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px;"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
           <a href="../assets/pdf/street_fighter_3rd_strike_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>PDF Guide for SF3RD Strike</u></a> 
+          <a href="https://www.instagram.com/p/DI65ZwqscpG/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
           07.03.2025 - Super Street Fighter 2 Turbo
 					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 
-          <a href="../assets/pdf/super_street_fighter_2_turbo_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>PDF Guide for SF2ST</u></a> 
+          <a href="../assets/pdf/super_street_fighter_2_turbo_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>PDF Guide for SF2ST</u></a>
+          <a href="https://www.instagram.com/p/DHF4_dYsggH/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					31.01.2025 - Tekken 3
-					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>          
+					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+          <a href="https://www.instagram.com/p/DG2FEnyCXC0/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
                  
           </span>
 			</p>
