--- a/en/videogames.html
+++ b/en/videogames.html
@@ -66,11 +66,11 @@
             <li class="navbar-item">
                   <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+
+          <li class="navbar-item">
+                  <a href="v-list.html" class="navbar-link skewBg" data-nav-link>Game list</a>
                   </li>
-            -->
+
             <li class="navbar-item">
                   <a href="gallery.html" class="navbar-link skewBg" data-nav-link>Gallery</a>
                   </li>
@@ -123,12 +123,10 @@
 
 
       <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('../assets/images/gaming-banner.jpg')">
+        style="background-image: url('../assets/images/gaming-banner2.jpg')">
         <div class="container">
 
           <div class="hero-content">
-
-            <p class="hero-subtitle">VideoGamesKerho</p>
 
             <h1 class="h1 hero-title">
               Lahti's <span class="span">Video Games</span> Hub
@@ -137,10 +135,10 @@
             Weekly starting 6.2.2026
             </span>
             <p class="hero-text"><span>
-              Video games evening is hosted Fridays from 16:00 - 20:30 at Niemenkatu 73 lobby. Up to 50 people per evening.
+              Video games evening is hosted Fridays from 16:00 - 20:30 at Niemenkatu 73 lobby. Free and open for everybody.
 			  <br>
 			  <br>
-			  8 PC's, 2 PS4, 2 PS3, 40 controllers, racing wheel, jackbox party pack, 6 pcs of "keyboard, mouse, mousepad, headphones" and 6 PC's that are good enough for CS2 and Fortnite. 
+			  6 PC's, 2 PS4, 2 PS3, 40 controllers, racing wheel, jackbox party pack, 6 pcs of "keyboard, mouse, mousepad, headphones" and 3 PC's that are good enough for CS2 and Fortnite. 
             </span></p>
 
       </section>
@@ -218,7 +216,7 @@
     <br>
     
             <h2 class="h2 section-title" style="margin-bottom:80px;">
-              Pelaamisen  <span class="span"> sijainti</span>
+              Gaming  <span class="span"> location</span>
             </h2>
 
     <div class="container">
@@ -226,7 +224,7 @@
       <div class="hero-content">
 
       <div class="responsive-iframe">
-      <img src="../assets/images/tabletop-banner3.jpg" alt="Lahti Science park Kanttis restaurant area" style="max-width: 100%;
+      <img src="../assets/images/gaming-banner3.jpg" alt="Lahti Science park's lobby" style="max-width: 100%;
   height: auto;
   display: block;">
     
