--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -68,11 +68,11 @@
             <li class="navbar-item">
                   <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
-            <!--
+
             <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+                  <a href="../en/v-list.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
                   </li>
-            -->
+                  
             <li class="navbar-item">
                   <a href="info.html" class="navbar-link skewBg" data-nav-link>Tietoa meistä</a>
                   </li> 
