--- a/fi/info.html
+++ b/fi/info.html
@@ -70,11 +70,11 @@
             <li class="navbar-item">
                   <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+
+          <li class="navbar-item">
+                  <a href="../en/v-list.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
                   </li>
-            -->
+
             <li class="navbar-item">
                   <a href="galleria.html" class="navbar-link skewBg" data-nav-link>Galleria</a>
                   </li>
