--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -64,11 +64,11 @@
           <li class="navbar-item">
                 <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                 </li>
-          <!--
+
           <li class="navbar-item">
-                <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+                <a href="../en/v-list.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
                 </li>
-          -->
+
           <li class="navbar-item">
                 <a href="galleria.html" class="navbar-link skewBg" data-nav-link>Galleria</a>
                 </li>
@@ -251,7 +251,7 @@
 
 
 		-----------------------------------------------
-        MARK: #About us
+        MARK: #Info
 		-----------------------------------------------
 		-->
 
@@ -280,7 +280,7 @@
 					<br>
           ~ Pysäköinti ~<br>
           3 paikkaa Saima6 etupihalla<br>
-          Ennen klo 16   <a href="https://maps.app.goo.gl/4hjX1k54Gp8urh6J6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Ursankadulla</u></a>
+          Ennen klo 16   <a href="https://maps.app.goo.gl/4hjX1k54Gp8urh6J6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Ursankadulla (2h pysäköinti)</u></a>
           Klo 16 jälkeen <br>
           Maksullinen parkeeraus loppui klo 16, niin missä vain <br>
 					<br>
@@ -332,18 +332,23 @@
           07.08.2025 - Street Fighter 6
           <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
           <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;"><u>Viimeinen matsi youtubessa</u></a>
+          <a href="https://www.instagram.com/p/DNFqV4osoei/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram kuvat</u></a>
           ~~~
           <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
+          <a href="https://www.instagram.com/p/DI65ZwqscpG/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram kuvat</u></a>
           ~~~
           <br>
           07.03.2025 - Super Street Fighter 2 Turbo
-					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
+					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
+          <a href="https://www.instagram.com/p/DHF4_dYsggH/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram kuvat</u></a>
+
           ~~~
           <br>
 					31.01.2025 - Tekken 3
-					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>    
+					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
+          <a href="https://www.instagram.com/p/DG2FEnyCXC0/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram kuvat</u></a>
 					<br>
 					Taistelupeli-turnaus on tehty ammattilais taistelupelaajien avustamana, YaBoiSpades & JuusoDotExe
 			</span>
