--- a/en/fighting.html
+++ b/en/fighting.html
@@ -64,11 +64,11 @@
             <li class="navbar-item">
                   <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
+
+          <li class="navbar-item">
+                  <a href="v-list.html" class="navbar-link skewBg" data-nav-link>Game list</a>
                   </li>
-            -->
+
             <li class="navbar-item">
                   <a href="gallery.html" class="navbar-link skewBg" data-nav-link>Gallery</a>
                   </li>
@@ -275,7 +275,7 @@
 
           ~ Parking ~<br>
           3 places in the Saima6 front yard <br>
-          Before 4 pm <a href="https://maps.app.goo.gl/4hjX1k54Gp8urh6J6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Ursankatu</u></a>
+          Before 4 pm <a href="https://maps.app.goo.gl/4hjX1k54Gp8urh6J6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Ursankatu (2h parking)</u></a>
           After 4 pm <br>
           Paid parking ends at 4 pm, so anywhere<br><br>
 
@@ -314,31 +314,36 @@
 					<br>
           24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
-					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue;"><u>Edited stream in youtube</u></a>
-          <a href="https://www.instagram.com/p/DQVH4rMDHLz/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
+					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Edited stream in youtube</u></a>
+          <a href="https://www.instagram.com/p/DQVH4rMDHLz/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					12.09.2025 - Tekken 7
 					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
-					<a href="https://www.youtube.com/watch?v=LLHLs1lGuPo" target="_blank" style="color: DodgerBlue;"><u>Edited stream in youtube</u></a>
-          <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
+					<a href="https://www.youtube.com/watch?v=LLHLs1lGuPo" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Edited stream in youtube</u></a>
+          <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
           07.08.2025 - Street Fighter 6
           <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>
-          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;"><u>Last match in youtube</u></a>
+          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Last match in youtube</u></a>
+          <a href="https://www.instagram.com/p/DNFqV4osoei/?img_index=1" target="_blank"
+            style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
           25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+          <a href="https://www.instagram.com/p/DI65ZwqscpG/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
           07.03.2025 - Super Street Fighter 2 Turbo
-					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>
+          <a href="https://www.instagram.com/p/DHF4_dYsggH/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           ~~~
           <br>
 					31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+          <a href="https://www.instagram.com/p/DG2FEnyCXC0/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram pictures</u></a>
           <br>
 					Fighting Game tournament is made with the help of professional fighting game players, YaBoiSpades & JuusoDotExe
 			</span>
