--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -690,6 +690,13 @@ MARK: #Games we have
               </li>
 
               <li>
+                <a href="https://discord.gg/QqFxUd7hJU" target="_blank" class="social-link-2" style="background-color: #7289da">
+                  <ion-icon name="logo-discord"></ion-icon>
+                  <p>Discord</p>
+                </a>
+              </li>
+
+              <li>
                 <a href="https://www.instagram.com/videogameskerho/" target="_blank" class="social-link-2" style="background-color: #e60073">
                   <ion-icon name="logo-instagram"></ion-icon>
 				   <p>Instagram</p>
@@ -713,6 +720,13 @@ MARK: #Games we have
                 <a href="https://chat.whatsapp.com/E4ZDoieFq5X8K91nDPiM3R" target="_blank" class="social-link-2" style="background-color: #076e54">
                   <ion-icon name="logo-whatsapp"></ion-icon>
 				  <p>WhatsApp</p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://discord.gg/QqFxUd7hJU" target="_blank" class="social-link-2" style="background-color: #7289da">
+                  <ion-icon name="logo-discord"></ion-icon>
+                  <p>Discord</p>
                 </a>
               </li>
 
