--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -752,11 +752,28 @@ MARK: #Games we have
         </p>
 
       </div>
-                  <a href="../assets/images/lahti_fgc_images/lahti_fgc.png" target="_blank">
-            	    <img src="../assets/images/lahti_fgc_images/lahti_fgc.png" width="20%" height="20%" loading="lazy"
-                  alt="Lahti FGC taistelupeliyhteisön tarra taide"
-                  title="Lahti FGC Tarra taide" style="margin-top:500px">
-                  </a>
+<!--
+    		-----------------------------------------------
+            MARK: #End pictures
+    		-----------------------------------------------
+    		-->
+
+        <a href="../assets/images/lahti_fgc_images/lahti_fgc.png" target="_blank">
+          <img src="../assets/images/lahti_fgc_images/lahti_fgc.png" width="23%" height="23%" loading="lazy"
+            alt="Lahti FGC fighting game community's sticker art" title="Sticker art of Lahti FGC by Funz"
+            style="margin-top:500px">
+        </a>
+        <a href="../assets/images/lahti_fgc_images/lahti_fgc_2.png" target="_blank">
+          <img src="../assets/images/lahti_fgc_images/lahti_fgc_2.png" width="18%" height="18%" loading="lazy"
+            alt="Lahti FGC fighting game community's sticker art" title="Sticker art of Lahti FGC by Funz"
+            style="margin-top:0px;">
+        </a>
+        <a href="../assets/images/lahti_fgc_images/lahti_fgc_3.png" target="_blank">
+          <img src="../assets/images/lahti_fgc_images/lahti_fgc_3.png" width="20%" height="20%" loading="lazy"
+            alt="Lahti FGC fighting game community's sticker art" title="Sticker art of Lahti FGC by Funz"
+            style="margin-top:0px">
+        </a>
+      </div>
     </div>
 
   </footer>
