--- a/en/v-list.html
+++ b/en/v-list.html
@@ -172,8 +172,7 @@
               <ion-icon name="trash-outline"></ion-icon>
             </button>
           </div>
-          <div class="filter-header">
-            <h3>Narrow by tag</h3>
+          <div>
             <button id="filter-close-btn" class="filter-close-btn">
               <ion-icon name="close-outline"></ion-icon>
             </button>
