--- a/en/v-list.html
+++ b/en/v-list.html
@@ -114,6 +114,21 @@
         <a href="b-list.html" class="game-tab skewBg2">Boardgames</a>
       </div>
 
+      <!-- Welcome Message -->
+      <div id="welcome-message" class="welcome-message" style="display: none;">
+        <div class="welcome-message-content">
+          <ion-icon name="information-circle-outline"></ion-icon>
+          <div class="welcome-message-text">
+            <p><strong>Installed</strong> = Games that are installed in "video games club" computers.</p>
+            <p><strong>Not installed</strong> = Games that are not installed, but will be installed if you make a reservation.
+            </p>
+          </div>
+          <button id="welcome-message-close" class="welcome-message-close" title="Close">
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
+        </div>
+      </div>
+
       <!-- Main Content Area -->
       <div class="game-list-container">
 
