--- a/en/v-list.html
+++ b/en/v-list.html
@@ -120,7 +120,7 @@
           <ion-icon name="information-circle-outline"></ion-icon>
           <div class="welcome-message-text">
             <p><strong>Installed</strong> = Games that are installed in "video games club" computers.</p>
-            <p><strong>Not installed</strong> = Games that are not installed, but will be installed if you make a reservation.
+            <p><strong>Not installed</strong> = Games that are not installed, but will be installed if you reserve them.
             </p>
           </div>
           <button id="welcome-message-close" class="welcome-message-close" title="Close">
