--- a/fi/index.html
+++ b/fi/index.html
@@ -152,7 +152,7 @@
 			<span>
 				Kaptam Gamers on Päijät-Hämeen alueen videopeli, lautapeli ja roolipeli harrastuksia edistävä yhdistys.
 				Tarkoituksemme on tehdä paikan päällä tapahtuva harrastustoiminta kaikille avoimeksi.
-				Tämä avustaisi harrastuksesta kiinnostuneita pelaamaan yhdessä ja ehkä löytämään lisää hengenheimolaisia. 
+				Tämä avustaisi harrastuksesta kiinnostuneita pelaamaan yhdessä ja ehkä löytämään uusia hengenheimolaisia. 
 				<br>
 				<br>
 				“We are a democracy. We are doing it for the people”.
