Blazblue removal & week delay to videogames & boardgames club

--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -277,6 +277,7 @@ MARK: #Games we have
       MARK: #Blog
       -----------------------------------------------
       -->
+      <!--
 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
@@ -356,7 +357,7 @@ MARK: #Games we have
         </div>
       </section>
 
-
+    -->
 
     <!-- 
 		-----------------------------------------------
@@ -491,6 +492,14 @@ MARK: #Games we have
 
             <p class="hero-text"> 
 			<span style="text-align:left">
+          27.12.2025 - BlazBlue Centralfiction
+          <a href="https://challonge.com/796mqzof" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=MDyu4Xejh0U" target="_blank"
+            style="color: DodgerBlue; margin-top:5px"><u>Edited vanilla in youtube</u></a>
+          <a href="https://www.twitch.tv/videos/2654155307" target="_blank"
+            style="color: DodgerBlue; margin-top:5px"><u>Stream in twitch</u></a>
+          ~~~
+          <br>
           24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
 					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Edited stream in youtube</u></a>
