--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -275,7 +275,7 @@ MARK: #Games we have
       MARK: #Blog
   	-----------------------------------------------
   	-->
-
+    <!-- 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
 
@@ -351,7 +351,7 @@ MARK: #Games we have
       </section>
 
 
-
+    -->
     <!-- 
 		-----------------------------------------------
         MARK: #Gallery
@@ -485,6 +485,13 @@ MARK: #Games we have
 
             <p class="hero-text"> 
 			<span style="text-align:left">
+          27.12.2025 - BlazBlue Centralfiction
+          <a href="https://challonge.com/796mqzof" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=MDyu4Xejh0U" target="_blank"
+            style="color: DodgerBlue; margin-top:5px"><u>Vanilla kooste youtubessa</u></a>
+          <a href="https://www.twitch.tv/videos/2654155307" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Streemi twitch:ssä</u></a>
+          ~~~
+          <br>
         	24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Editoitu streemi youtubessa</u></a>
