--- a/en/v-list.html
+++ b/en/v-list.html
@@ -227,11 +227,12 @@
     <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">
-          &copy; 2026 Kaptam Gamers ry All Right Reserved.
-          Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
-          and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
-        </p>
+    <p class="copyright">
+      &copy; 2026 Kaptam Gamers ry All Right Reserved.
+      Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
+      and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
+      Gamelist systems <a href="privacy.html" class="copyright-link">Privacy Policy</a>.
+    </p>
 
       </div>
     </div>
