--- a/en/reserve.html
+++ b/en/reserve.html
@@ -268,7 +268,7 @@
       &copy; 2026 Kaptam Gamers ry All Right Reserved.
       Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
       and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
-      Gamelist systems <a href="privacy.html" class="copyright-link">Privacy Policy</a>.
+      Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>.
     </p>
 
       </div>
