--- a/en/v-list.html
+++ b/en/v-list.html
@@ -230,8 +230,8 @@
     <p class="copyright">
       &copy; 2026 Kaptam Gamers ry All Right Reserved.
       Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
-      and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
-      Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>.
+      & <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
+      Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>
     </p>
 
       </div>
