--- a/en/b-list.html
+++ b/en/b-list.html
@@ -151,7 +151,7 @@
       &copy; 2026 Kaptam Gamers ry All Right Reserved.
       Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
       & <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
-      Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>
+      Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>.
     </p>
 
       </div>
