b-list images + bit more

--- a/en/b-list.html
+++ b/en/b-list.html
@@ -119,8 +119,7 @@
         <div class="welcome-message-content">
           <ion-icon name="information-circle-outline"></ion-icon>
           <div class="welcome-message-text">
-            <p>Browse our boardgame collection and reserve games for your visit to the Board Games Club.</p>
-            <p>Each game shows the number of physical copies we have available.</p>
+            <p>Browse our boardgame collection and reserve games for your visit at the weeklies.</p>
           </div>
           <button id="welcome-message-close" class="welcome-message-close" title="Close">
             <ion-icon name="close-outline"></ion-icon>
@@ -143,7 +142,6 @@
             <div class="sort-box">
               <label for="sort-select">Sort by</label>
               <select id="sort-select">
-                <option value="copies">Most Copies</option>
                 <option value="name-asc">Name A-Z</option>
                 <option value="name-desc">Name Z-A</option>
                 <option value="playtime-short">Playtime (Shortest)</option>
