--- a/en/v-list.html
+++ b/en/v-list.html
@@ -119,8 +119,9 @@
         <div class="welcome-message-content">
           <ion-icon name="information-circle-outline"></ion-icon>
           <div class="welcome-message-text">
-            <p><strong>Installed</strong> = Games that are installed in "video games club" computers.</p>
-            <p><strong>Not installed</strong> = Games that are not installed, but will be installed if you reserve them.
+            <p>Browse our videogame collection and reserve games for your visit at the weeklies.</p>
+            <p><strong>Installed</strong> = Games that are installed in "video games club" computers</p>
+            <p><strong>Not installed</strong> = Games that are not installed, but will be installed if you reserve them
             </p>
           </div>
           <button id="welcome-message-close" class="welcome-message-close" title="Close">
